# x-files

./: .gitignore
client/: package.json
client/app/: globals.css  layout.tsx  page.tsx
client/components/: input.tsx
client/components/ui/: prompt-input.tsx
client/providers/: graph-store-provider.tsx
client/stores/: graph-store.ts
server/: LICENSE  fastapi_app.py  generate_knowledge_graph.py  pyproject.toml
