[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "hassanxelamin",email = "hello@hassanelamin.co"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "langchain-openai (>=0.3.18,<0.4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pyvis (>=0.3.2,<0.4.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "graphiti-core[anthropic,google-genai,groq] (>=0.11.6,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
